--- a/plugins/raxidev/artpanel/controllers/about/_list_toolbar.htm
+++ b/plugins/raxidev/artpanel/controllers/about/_list_toolbar.htm
@@ -1,5 +1,12 @@
 <div data-control="toolbar">
+    <?php 
+        $items = Db::table('raxidev_artpanel_about')->get()->count();
+        if($items == 0):
+         ?> 
         <a href="<?= Backend::url('raxidev/artpanel/about/create') ?>" class="btn btn-primary oc-icon-plus"><?= e(trans('backend::lang.form.create')) ?></a>
+        <?php else: ?>
+            <h3 style="color:green;">Siz faqat bitta namuna yarata olasiz! Hozirgi namunani tahrirlash orqali o'zgartirishingiz mumkin. <br> Agar ayni damdagi namunani o'chirsangiz yana yarata yarata olasiz.</h3>
+        <?php endif; ?>
             <button
         class="btn btn-default oc-icon-trash-o"
         disabled="disabled"
