--- a/plugins/raxidev/artpanel/controllers/slayder/_list_toolbar.htm
+++ b/plugins/raxidev/artpanel/controllers/slayder/_list_toolbar.htm
@@ -1,5 +1,12 @@
 <div data-control="toolbar">
+        <?php 
+            $items = Db::table('raxidev_artpanel_slayder')->get()->count();
+            if($items < 5):
+         ?> 
         <a href="<?= Backend::url('raxidev/artpanel/slayder/create') ?>" class="btn btn-primary oc-icon-plus"><?= e(trans('backend::lang.form.create')) ?></a>
+         <?php else: ?>
+            <h3 style="color:green;">Siz faqat 5 ta namuna yarata olasiz! Hozirgi namunalarni tahrirlash orqali o'zgartirishingiz mumkin. <br> Agar ayni damdagi namunalarni o'chirsangiz yana yarata yarata olasiz.</h3>
+        <?php endif; ?>
             <button
         class="btn btn-default oc-icon-trash-o"
         disabled="disabled"
