--- a/plugins/raxidev/artpanel/controllers/statistika/_list_toolbar.htm
+++ b/plugins/raxidev/artpanel/controllers/statistika/_list_toolbar.htm
@@ -1,5 +1,13 @@
-<div data-control="toolbar">
-        <a href="<?= Backend::url('raxidev/artpanel/statistika/create') ?>" class="btn btn-primary oc-icon-plus"><?= e(trans('backend::lang.form.create')) ?></a>
+
+<div data-control="toolbar">   
+        <?php 
+            $items = Db::table('raxidev_artpanel_statiskika_va_iqtidorli_talabalar')->get()->count();
+            if($items == 0):
+        ?> 
+            <a href="<?= Backend::url('raxidev/artpanel/statistika/create') ?>" class="btn btn-primary oc-icon-plus"><?= e(trans('backend::lang.form.create')) ?></a>
+        <?php else: ?>
+            <h3 style="color:green;">Siz faqat bitta namuna yarata olasiz! Hozirgi namunani tahrirlash orqali o'zgartirishingiz mumkin. <br> Agar ayni damdagi namunani o'chirsangiz yana yarata yarata olasiz.</h3>
+        <?php endif; ?>
             <button
         class="btn btn-default oc-icon-trash-o"
         disabled="disabled"
@@ -16,3 +24,4 @@
         <?= e(trans('backend::lang.list.delete_selected')) ?>
     </button>
 </div>
+
