--- a/themes/art-fakult/pages/xabarlar-ichki-contenti.htm
+++ b/themes/art-fakult/pages/xabarlar-ichki-contenti.htm
@@ -1,4 +1,4 @@
-url = "/xabarlar-ichki-contenti/:slug"
+url = "/xabarlar-ichki-contenti/:slug?"
 layout = "dinamik-pagelar-uchun"
 title = "Xabarlar ichki contenti"
 
